--- a/Spotify/Spotify.csproj
+++ b/Spotify/Spotify.csproj
@@ -5,7 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\DataDump.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\DataDump.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Resources\DataDump.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
