--- a/Spotify/appsettings.json
+++ b/Spotify/appsettings.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ClientId": "{{get at https://developer.spotify.com/dashboard/applications}}",
+    "ClientSecret": "{{get at https://developer.spotify.com/dashboard/applications}}"
 }
