Implemented Authorization Code and removed Client Credentials Flow.

--- a/Spotify/Spotify.csproj
+++ b/Spotify/Spotify.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>35e28bab-60a7-47be-9b63-f46033a06ddc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
