Added remove track from playlist feature

--- a/Spotify/appsettings.json
+++ b/Spotify/appsettings.json
@@ -5,6 +5,8 @@
         }
     },
     "AllowedHosts": "*",
-    "ClientId": "{{get at https://developer.spotify.com/dashboard/applications}}",
-    "ClientSecret": "{{get at https://developer.spotify.com/dashboard/applications}}"
+    "Values": {
+        "ClientId": "{{get at https://developer.spotify.com/dashboard/applications}}",
+        "ClientSecret": "{{get at https://developer.spotify.com/dashboard/applications}}"
+    }
 }
