Added image, did some bundling

--- a/Spotify/bundleconfig.json
+++ b/Spotify/bundleconfig.json
@@ -15,5 +15,17 @@
             "renameLocals": true
         },
         "sourceMap": false
+    },
+    {
+        "outputFileName": "wwwroot/js/playlistSearch.min.js",
+        "inputFiles": [
+            "wwwroot/js/countdown.js",
+            "wwwroot/js/playlistSearch.js"
+        ],
+        "minify": {
+            "enabled": true,
+            "renameLocals": true
+        },
+        "sourceMap": false
     }
 ]
