--- a/Spotify/bundleconfig.json
+++ b/Spotify/bundleconfig.json
@@ -24,7 +24,7 @@
             "wwwroot/js/playlistSearch.js"
         ],
         "minify": {
-            "enabled": true,
+            "enabled": false,
             "renameLocals": false
         },
         "sourceMap": false
