--- a/Spotify/bundleconfig.json
+++ b/Spotify/bundleconfig.json
@@ -9,7 +9,8 @@
     {
         "outputFileName": "wwwroot/js/site.min.js",
         "inputFiles": [
-            "wwwroot/js/site.js"
+          "wwwroot/js/site.js",
+          "wwwroot/js/auth.js"
         ],
         "minify": {
             "enabled": true,
