--- a/Spotify/bundleconfig.json
+++ b/Spotify/bundleconfig.json
@@ -38,5 +38,16 @@
       "renameLocals": false
     },
     "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/js/hiddenFeatures.min.js",
+    "inputFiles": [
+      "wwwroot/js/hiddenFeatures.js"
+    ],
+    "minify": {
+      "enabled": false,
+      "renameLocals": false
+    },
+    "sourceMap": false
   }
 ]
